package prolocktech.services;

public class AuthService {
}
