@startuml
class HomeController {
    - ImageView img
    - ImageView message
    - ImageView profile
    - Button up
    - Button down
    - Button upload
    - Stage stage
    + init(stage)
    - uploadImage(stage)
    - changeToProfile(stage)
    - changeToMessage(stage)
    - upImage()
    - downImage()
}

class LoginController {
    - Label forgotpass
    - Button login
    - Label noti
    - Label signup
    - TextField username
    - PasswordField userpassword
    - Stage stage
    - UserService userService
    + init(stage)
    - loginAction()
    - signupAction() 
}

class SignupController {
    - Button create
    - TextField email
    - TextField username
    - PasswordField password
    - Label login
    - MenuButton language
    - Stage stage
    - UserService userService
    + init(stage)
    + createAccount()
    - backToLogin()
    + checkExist(): bool
}

class UploadController {
    - ImageView image
    - Button upload
    - Stage stage
    + init(stage)
    - fileChooserEvent(stage): File
    + UploadImage(stage)
}

class User {
    - String username
    - String password
    + User(username, password)
    # getUsername()
    # getPassword()
}

class Image {
    - String imageId
    - String owner
    - byte[] data
    + getData()
}
class UserService {
    - List<User> users
    + getUsers()
    - saveUsers(users)
    - loadUsers: List<User>
    + addUser(user)
    + findUsername(username): User
}

class ImageService {
    + uploadImage(user, data)
    + deleteImage(user, imageId)
    + getAllImages(): List<Image>
    + getImageByUser(user): List<Image>
    + addImage(user, image)
}

class AuthService {
    + register(username, password): boolean
    + login(username, password): boolean
}
HomeController --> ImageService : "Gửi ảnh lên/xóa ảnh"
UploadController --> ImageService : "Gửi ảnh lên"
LoginController --> UserService : "Xác thực người dùng"
SignupController --> UserService : "Tạo tài khoản mới"
SignupController --> AuthService : "Đăng ký"
LoginController --> AuthService : "Đăng nhập"
UserService *-- User : "Quản lý danh sách người dùng"
ImageService *-- Image : "Lưu danh sách ảnh"
User *--> Image : "Sở hữu ảnh"
@enduml
